# oecd_patent_api

./: .gitignore  Makefile  README.md  create_tables.sql  pyproject.toml
dashboards/: test.dashboard.py
docker-compose/: docker-compose.yaml
grafana/: dashboard_providers.yaml  datasources.yaml
sql/: create_tpf_applicants.sql  create_tpf_core.sql  create_tpf_cpc.sql  create_tpf_epo.sql  create_tpf_inventors.sql  create_tpf_ipc.sql  create_tpf_jpo.sql  create_tpf_pct.sql  create_tpf_priority.sql  create_tpf_uspto.sql
