[tool.poetry]
name = "oecd-patent-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "oecd_patent_api"}]

[tool.poetry.dependencies]
python = "^3.10"
grafanalib = "^0.7.0"
flake8 = "^5.0.4"
rope = "^1.4.0"
black = "^22.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
